# ota-yaml

./: Cargo.toml  Dockerfile  README
.github/workflow/: publish.yml
.github/workflows/: publish.yml
data/: driver.json  merge-template.yaml
src/: auth.rs  carside.rs  connection.rs  lib.rs  main.rs
src/mode/: components.rs  edit.rs  merge.rs  mod.rs  scenario.rs
