[package]
edition = "2021"
name = "ota-yaml"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.1"
chrono = "0.4.22"
colored = "2.0.0"
directories = "4.0.1"
futures = "0.3.23"
futures-channel = "0.3.23"
futures-util = "0.3.23"
inquire = { version = "0.2.1", features = ["editor"] }
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.139", features = ["derive"]}
serde-diff = "0.4.1"
serde_json = "1.0.82"
serde_merge = "0.1.3"
serde_yaml = "0.9.9"
similar = "2.2.0"
tempfile = "3.3.0"
tokio = {version = "1.20.0", features = ["full"]}
tokio-tungstenite = "0.17.2"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
